--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,16 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  rabbitmq:
+    image: "rabbitmq:3.9.7-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "mysecretcookie"
+    volumes:
+      - "rabbitmq_data:/var/lib/rabbitmq"
+
 volumes:
   postgres-data:
+  rabbitmq_data:
