--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config"
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config",
+    "dev": "ts-node src/main.ts"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
