--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "nanoid": "^3.3.6",
     "nodemailer": "^6.9.4",
     "uuid": "^9.0.0"
   }
