--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.1",
     "nanoid": "^3.3.6",
     "nodemailer": "^6.9.4",
+    "redis": "^4.6.8",
     "uuid": "^9.0.0"
   }
 }
